placeholder and site adjustment

--- a/srv/index.html
+++ b/srv/index.html
@@ -1,7 +1,26 @@
 <html>
 	<head>
+	  <style>
+		#card {
+			background: white;
+			max-width: 400px;
+			min-height: 200px;
+			margin: 50px auto;
+			padding: 16px;
+			border-radius: 10px;
+			text-align: center;
+			vertical-align: middle;
+		}
+		#tada {
+			font-size: 48px;
+		}
+	  </style>
 	</head>
-	<body>
-		Test
+	<body style="background: grey;">
+		<div id="card">
+		  Hello, </br>
+		  There will be a site here soon!
+		  <p id="tada">🎉</p>
+		</div>
 	</body>
 </html>
